# MandelSample

./: .gitignore  README.md  mandelsample.py  pyproject.toml  requirements.txt  submit_mandelsample.sh
src/mandelsample/: sample.py
typings/ROOT/: __init__.pyi
